<?xml version="1.0"?>
<package format="2">
  <name>tb</name>
  <version>1.0.0</version>
  <description>The tb package</description>

  <maintainer email="ndema2301@gamil.com">Nikolay Dema</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/tb</url> -->

  <author email="ndema2301@gmail.com">Nikolay Dema</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
